--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "ts-readme-generator": "^0.7.2"
   },
   "peerDependencies": {
-    "@react-spring/native": "^9.5.5",
-    "@react-spring/web": "^9.5.5",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0",
+    "react-native": ">=16.0.0"
   },
   "peerDependenciesMeta": {
     "@react-spring/native": {
