Change peerDependencies for React to <=16.0.0

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "ts-readme-generator": "^0.7.2"
   },
   "peerDependencies": {
-    "react": ">=16.0.0",
-    "react-dom": ">=16.0.0",
-    "react-native": ">=16.0.0"
+    "react": "<=16.0.0",
+    "react-dom": "<=16.0.0",
+    "react-native": "<=16.0.0"
   },
   "peerDependenciesMeta": {
     "@react-spring/native": {
