--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "ts-readme-generator": "^0.7.2"
   },
   "peerDependencies": {
-    "react": "<=16.0.0",
+    "react": "19.2.0",
     "react-dom": "<=16.0.0",
     "react-native": "<=16.0.0"
   },
