--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "peerDependencies": {
     "react": "19.2.0",
-    "react-dom": "<=16.0.0",
-    "react-native": "<=16.0.0"
+    "react-dom": "19.2.0",
+    "react-native": "19.2.0"
   },
   "peerDependenciesMeta": {
     "@react-spring/native": {
